--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,31 @@
 
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}I<span>DEV</span>{% endif %}</a>
-    <ul class"main_menu">
-    <li class="nav-item">
-	<a href="{{site.baseurl}}/about/">About</a>
-	</li>
-	<li class="nav-item">
-    <a href="{{site.baseurl}}/contact/">Contact</a>
-	</li>
-	{% include search-lunr.html %}
-	</ul>
-    </nav>
+    <nav id='menu'>
+  <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+  <ul>
+    <li><a href='http://'>Home</a></li>
+    <li><a class='dropdown-arrow' href='http://'>Products</a>
+      <ul class='sub-menus'>
+        <li><a href='http://'>Products 1</a></li>
+        <li><a href='http://'>Products 2</a></li>
+        <li><a href='http://'>Products 3</a></li>
+        <li><a href='http://'>Products 4</a></li>
+      </ul>
+    </li>
+    <li><a href='{{site.baseurl}}/about/'>About</a></li>
+    <li><a class='dropdown-arrow' href='http://'>Services</a>
+      <ul class='sub-menus'>
+        <li><a href='http://'>Services 1</a></li>
+        <li><a href='http://'>Services 2</a></li>
+        <li><a href='http://'>Services 3</a></li>
+      </ul>
+    </li>
+    <li><a href='{{site.baseurl}}/contact/'>Contact Us</a></li>
+  </ul>
+  {% include search-lunr.html %}
+</nav>
 </header> <!-- End Section Header -->
+
+
+
