--- a/assets/css/sass/main.sass
+++ b/assets/css/sass/main.sass
@@ -7,6 +7,156 @@
 
 *, *::after, *::before
   box-sizing: border-box
+$color_1: #FFF;
+$color_2: #FFFFFF;
+$color_3: #0099CC;
+$color_4: #444444;
+$color_5: white;
+
+#menu {
+	background: #1D40CC;
+	color: $color_1;
+	height: 46px;
+	padding-left: 18px;
+	border-radius: 28px;
+	ul {
+		margin: 0 auto;
+		padding: 0;
+		list-style: none;
+		width: 100%;
+	}
+	li {
+		margin: 0 auto;
+		padding: 0;
+		list-style: none;
+		float: left;
+		display: inline;
+		position: relative;
+		a {
+			&:hover {
+				color: $color_3;
+				background: #F2F2F2;
+			}
+		}
+		&:hover {
+			ul.sub-menus {
+				display: block;
+			}
+		}
+	}
+	a {
+		display: block;
+		line-height: 46px;
+		padding: 0 14px;
+		text-decoration: none;
+		color: $color_2;
+		font-size: 16px;
+	}
+	a.dropdown-arrow {
+		&:after {
+			content: "\23F7";
+			margin-left: 5px;
+		}
+	}
+	input {
+		display: none;
+		margin: 0;
+		padding: 0;
+		height: 46px;
+		width: 100%;
+		opacity: 0;
+		cursor: pointer;
+	}
+	label {
+		display: none;
+		line-height: 46px;
+		text-align: center;
+		position: absolute;
+		left: 35px;
+		&:before {
+			font-size: 1.6em;
+			content: "\2261";
+			margin-left: 20px;
+		}
+	}
+	ul.sub-menus {
+		height: auto;
+		overflow: hidden;
+		width: 170px;
+		background: #1D40CC;
+		position: absolute;
+		z-index: 99;
+		display: none;
+		li {
+			display: block;
+			width: 100%;
+		}
+		a {
+			color: $color_2;
+			font-size: 16px;
+			&:hover {
+				background: #F2F2F2;
+				color: $color_4;
+			}
+		}
+	}
+}
+@media screen and (max-width: 800px) {
+	#menu {
+		position: relative;
+		ul {
+			background: #111;
+			position: absolute;
+			top: 100%;
+			right: 0;
+			left: 0;
+			z-index: 3;
+			height: auto;
+			display: none;
+		}
+		ul.sub-menus {
+			width: 100%;
+			position: static;
+			a {
+				padding-left: 30px;
+			}
+		}
+		li {
+			display: block;
+			float: none;
+			width: auto;
+		}
+		input {
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			z-index: 4;
+			&:checked {
+				+ {
+					label {
+						color: $color_5;
+						&:before {
+							content: "\00d7";
+						}
+					}
+				}
+				~ {
+					ul {
+						display: block;
+					}
+				}
+			}
+		}
+		label {
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+		}
+	}
+}
+
 
 body
   font-family: "Lato", sans-serif
